objects/LicenseAlertConfig__c.object
<CustomObject>
    <fields>
        <fullName>CopyTo__c</fullName>
        <description>Email address to use for the CC: on the Lilcense alert email. Not required.  If the field is blank, no CC will be added.</description>
        <label>Copy To</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmailTemplate__c</fullName>
        <description>Enter the Email Template&apos;s DeveloperName to use for sending the License Alert emails.</description>
        <inlineHelpText>Click on &quot;Manage&quot;</inlineHelpText>
        <label>Email Template</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendTo__c</fullName>
        <description>User to Send the Email to.  Will be used in a SOQL query:

User u = [select id, Name from User WHERE IsActive=true AND Email =:SendTo Limit 1];</description>
        <label>Send To</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SenderEmail__c</fullName>
        <description>Who is the email from.  Used in the reply to.</description>
        <label>Sender Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SenderName__c</fullName>
        <description>setSenderDisplayName used in the email.  Shows who the email is from.</description>
        <label>Sender Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>